--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react_key_concepts",
-  "homepage": "https://github.com/VelamPillai/react-key-concepts",
+  "homepage": "https://VelamPillai.github.io/react-key-concepts",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
